@@ -1095,7 +1095,7 @@ Announcements
   and a string and processes them just like DF does. Sometimes this means the announcement won't occur.
   Can also be built from parameters instead of a ``report_init``. Setting ``is_sparring`` to ``true`` means the report
   will be added to sparring logs (if applicable) rather than hunting or combat. Text is parsed using ``&`` as an escape character, with ``&r``
-  being a newline, ``&&`` being just ``&``, and any other combination causing neither character to display.
+  adding a blank line (equivalent to ``\n \n``,) ``&&`` being just ``&``, and any other combination causing neither character to display.
 
 Other
 ~~~~~
@@ -3856,6 +3856,7 @@ Subclass of Widget; implements a simple edit field.
 
 Attributes:
 
+:label_text: The optional text label displayed before the editable text.
 :text: The current contents of the field.
 :text_pen: The pen to draw the text with.
 :on_char: Input validation callback; used as ``on_char(new_char,text)``.
@@ -3863,6 +3864,8 @@ Attributes:
 :on_change: Change notification callback; used as ``on_change(new_text,old_text)``.
 :on_submit: Enter key callback; if set the field will handle the key and call ``on_submit(text)``.
 :key: If specified, the field is disabled until this key is pressed. Must be given as a string.
+:key_sep: If specified, will be used to customize how the activation key is
+          displayed. See ``token.key_sep`` in the ``Label`` documentation below.
 
 Label class
 -----------
@@ -3931,8 +3934,8 @@ containing newlines, or a table with the following possible fields:
 * ``token.key_sep = '...'``
 
   Specifies the separator to place between the keybinding label produced
-  by ``token.key``, and the main text of the token. If the separator is
-  '()', the token is formatted as ``text..' ('..binding..')'``. Otherwise
+  by ``token.key``, and the main text of the token. If the separator starts with
+  '()', the token is formatted as ``text..' ('..binding..sep:sub(2)``. Otherwise
   it is simply ``binding..sep..text``.
 
 * ``token.enabled``, ``token.disabled``
@@ -4023,6 +4026,8 @@ a hotkey.
 It has the following attributes:
 
 :key: The hotkey keycode to display, e.g. ``'CUSTOM_A'``.
+:key_sep: If specified, will be used to customize how the activation key is
+          displayed. See ``token.key_sep`` in the ``Label`` documentation.
 :label: The string (or a function that returns a string) to display after the
     hotkey.
 :on_activate: If specified, it is the callback that will be called whenever
